--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,12 @@
+# Downloaded datasets
+**/dataset/
+
+# Log
+**/nohup.out
+
+# Model
+**/pytorch_model.bin
+
 # Byte-compiled / optimized / DLL files
 __pycache__/
 *.py[cod]
